--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,10 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #d972f0aa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #d972f0aa);
 }
 
 @keyframes logo-spin {
@@ -39,4 +39,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.postal-search-btn {
+  background-color: #b17bc8; 
+  color: rgb(0, 0, 0); 
 }
