--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,26 @@
   background-color: #b17bc8; 
   color: rgb(0, 0, 0); 
 }
+
+.app-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 100%; 
+}
+
+.sidebar {
+  
+  width: 65px; 
+  height: 150vh;
+  position: fixed; 
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column; 
+}
+
+.dashboard {
+  margin-left: 200px; 
+  padding: 20px; 
+}
